fixed z-index

--- a/client/src/components/layout/DeletePopup/DeletePopup.module.scss
+++ b/client/src/components/layout/DeletePopup/DeletePopup.module.scss
@@ -7,7 +7,7 @@
   background-color: #483375ea;
   top: 0;
   left: 0;
-  z-index: 99;
+  // z-index: 9;
 }
 
 .popupOuter {
