--- a/client/src/components/pages/JobTracker/JobTrackerPage.module.scss
+++ b/client/src/components/pages/JobTracker/JobTrackerPage.module.scss
@@ -19,4 +19,5 @@
   padding: 0 1.5rem 1.5rem 1.5rem;
   overflow-x: scroll;
   overflow-y: hidden;
+  z-index: -1;
 }
